cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.h

typedef void* graph_t;
typedef void* tensor_t;
typedef void* node_t;
struct custom_kernel_tensor
{
    int dim[MAX_SHAPE_DIM_NUM]; 
    int dim_num; 
    int element_num;
    int element_size; 
    int data_type;
    int dev_type; 
    int layout_type; 
    int quant_type; 
    float* scale;
    int* zero_point;
    int* quant_number;
    void* data; 
    void* dev_mem; 
    void* mapped_mem; 
};
struct custom_kernel_ops
{
    const char* kernel_name; 
    const char* op; 
    int force; 
    void* kernel_param; 
    int kernel_param_size;
    int (*infer_shape)(struct custom_kernel_ops* ops, const int* inputs[], int input_num, int* outputs[],
                       int output_num, int layout);
    int (*inplace_info)(struct custom_kernel_ops* ops, int output_idx);    
    int (*bind)(struct custom_kernel_ops* ops, const struct custom_kernel_tensor* inputs[], int input_num,
                const struct custom_kernel_tensor* outputs[], int output_num);
    int (*prerun)(struct custom_kernel_ops* ops, struct custom_kernel_tensor* inputs[], int input_num,
                  struct custom_kernel_tensor* outputs[], int output_num, int dynamic_shape);
    int (*reshape)(struct custom_kernel_ops* ops, struct custom_kernel_tensor* inputs[], int input_num,
                   struct custom_kernel_tensor* outputs[], int output_num);
    int (*run)(struct custom_kernel_ops* ops, struct custom_kernel_tensor* inputs[], int input_num,
               struct custom_kernel_tensor* outputs[], int output_num);
    int (*postrun)(struct custom_kernel_ops* ops, struct custom_kernel_tensor* inputs[], int input_num,
                   struct custom_kernel_tensor* outputs[], int output_num);
    void (*release)(struct custom_kernel_ops* ops);
};
DLLEXPORT int add_node_attr(node_t node, const char* attr_name, const char* type_name, int size);
DLLEXPORT int get_node_attr_int(node_t node, const char* attr_name, int* attr_val);
DLLEXPORT int get_node_attr_float(node_t node, const char* attr_name, float* attr_val);
DLLEXPORT int get_node_attr_pointer(node_t node, const char* attr_name, void* attr_val);
DLLEXPORT int get_node_attr_generic(node_t node, const char* attr_name, const char* type_name, void* buf, int size);
DLLEXPORT int set_node_attr_int(node_t node, const char* attr_name, const int* attr_val);
DLLEXPORT int set_node_attr_float(node_t node, const char* attr_name, const float* attr_val);
DLLEXPORT int set_node_attr_pointer(node_t node, const char* attr_name, const void* attr_val);
DLLEXPORT int set_node_attr_generic(node_t node, const char* attr_name, const char* type_name, const void* buf, int size);
DLLEXPORT int set_custom_kernel(node_t node, const char* dev_name, struct custom_kernel_ops* kernel_ops);
DLLEXPORT int remove_custom_kernel(node_t node, const char* dev_name);
DLLEXPORT tensor_t create_graph_tensor(graph_t graph, const char* tensor_name, int data_type);
DLLEXPORT tensor_t get_graph_tensor(graph_t graph, const char* tensor_name);
DLLEXPORT const char* get_tensor_name(tensor_t tensor);
DLLEXPORT void release_graph_tensor(tensor_t tensor);
DLLEXPORT int get_tensor_shape(tensor_t tensor, int dims[], int dim_number);
DLLEXPORT int set_tensor_shape(tensor_t tensor, const int dims[], int dim_number);
DLLEXPORT int get_tensor_buffer_size(tensor_t tensor);
DLLEXPORT void* get_tensor_buffer(tensor_t tensor);
DLLEXPORT int set_tensor_data(tensor_t tensor, const void* input_data, int data_size);