cplussharp/vscode/rusttest/ncnntengine2rs/tengine_c_api.rs

extern "C" {
    #[doc = " @brief Add an attribute to a node."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node handle."]
    #[doc = " @param [in] attr_name: The name of the attribute to be added."]
    #[doc = " @param [in] type_name: The name of the std::type_info of the type,"]
    #[doc = "                       can be set to NULL to skip type match checking."]
    #[doc = " @param [in] size: The size of the attribute"]
    #[doc = ""]
    #[doc = " @return 0: Successfully,"]
    #[doc = "         -1: Failed."]
    pub fn add_node_attr(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        type_name: *const ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the attribute value (int) of a node"]
    #[doc = "        backended by get_node_attr_generic()."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [out] attr_val: Pointer to the int val to be saved."]
    #[doc = ""]
    #[doc = " @return 0: Retrieval value Successfully,"]
    #[doc = "         -1: Failed, the name does not exist or the type mismatch."]
    #[doc = ""]
    pub fn get_node_attr_int(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        attr_val: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the attribute value (float) of a node"]
    #[doc = "        backended by get_node_attr_generic()."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [out] attr_val: Pointer to the float val to be saved."]
    #[doc = ""]
    #[doc = " @return 0: Retrieval value Successfully,"]
    #[doc = "         -1: Failed, the name does not exist or the type mismatch."]
    pub fn get_node_attr_float(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        attr_val: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the attribute value (pointer) of a node"]
    #[doc = "        backended by get_node_attr_generic()."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [out] attr_val: Pointer to the pointer val to be saved."]
    #[doc = ""]
    #[doc = " @return  0: Retrieval value Successfully,"]
    #[doc = "         -1: Failed, the name does not exist or the type mismatch."]
    pub fn get_node_attr_pointer(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        attr_val: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the attribute value of a node, the data type is indicated by type_info."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [in] type_info: The pointer to the std::type_info of expected type"]
    #[doc = "                   can be set to NULL to skip type match checking."]
    #[doc = " @param [out] buf: The pointer to the buffer to save val."]
    #[doc = " @param [in] size: The buffer size."]
    #[doc = ""]
    #[doc = " @return  0: Retrieval value Successfully,"]
    #[doc = "         -1: Failed; The name does not exist or the type mismatch."]
    #[doc = ""]
    pub fn get_node_attr_generic(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        type_name: *const ::std::os::raw::c_char,
        buf: *mut ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the attribute value (int) of a node"]
    #[doc = "        backended by set_node_attr_generic()."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [in] attr_val: The pointer to the int val to be set."]
    #[doc = ""]
    #[doc = " @return  0: Retrieval value Successfully;"]
    #[doc = "         -1: Failed, The name does not exist or the type mismatch."]
    #[doc = ""]
    pub fn set_node_attr_int(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        attr_val: *const ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the attribute value (float) of a node"]
    #[doc = "        backended by set_node_attr_generic()."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [in] attr_val: The pointer to the float val to be set."]
    #[doc = ""]
    #[doc = " @return  0: Retrieval value Successfully."]
    #[doc = "         -1: Failed, The name does not exist or the type mismatch."]
    #[doc = ""]
    pub fn set_node_attr_float(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        attr_val: *const f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the attribute value (pointer) of a node"]
    #[doc = "        backended by set_node_attr_generic()."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [in] attr_val: The pointer to the pointer val to be set."]
    #[doc = ""]
    #[doc = " @return  0: Retrieval value Successfully"]
    #[doc = "         -1: Failed, The name does not exist or the type mismatch."]
    #[doc = ""]
    pub fn set_node_attr_pointer(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        attr_val: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the attribute value of a node, the data type is indicated by type_info."]
    #[doc = ""]
    #[doc = " @param [in] node: The target node."]
    #[doc = " @param [in] attr_name: The name of the attribute to be retrieval."]
    #[doc = " @param [in] type_info: The pointer to the std::type_info of wanted type,"]
    #[doc = "                   can be set to NULL to skip type match checking."]
    #[doc = " @param [in] buf: The pointer to the buffer to hold val."]
    #[doc = " @param [in] size: The buffer size."]
    #[doc = ""]
    #[doc = " @return  0: Retrieval value Successfully."]
    #[doc = "         -1: Failed, The name does not exist or the type mismatch."]
    #[doc = ""]
    pub fn set_node_attr_generic(
        node: node_t,
        attr_name: *const ::std::os::raw::c_char,
        type_name: *const ::std::os::raw::c_char,
        buf: *const ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set customer kernel of a node, on a specific device,"]
    #[doc = "        the operate in kernel_ops must be the same as node's operate."]
    #[doc = ""]
    #[doc = " @param [in] node: The node handle."]
    #[doc = " @param [in] device: The kernel works for which device. NULL means for default device."]
    #[doc = " @param [in] kernel_ops: The custom implemented kernel operates."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn set_custom_kernel(
        node: node_t,
        dev_name: *const ::std::os::raw::c_char,
        kernel_ops: *mut custom_kernel_ops,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Remove customer kernel of a node, on a specific device."]
    #[doc = ""]
    #[doc = " @param [in] node: The node handle."]
    #[doc = " @param [in] device: The kernel works for which device. NULL means for default device."]
    #[doc = ""]
    #[doc = " @return 0: Success, -1: Fail."]
    pub fn remove_custom_kernel(
        node: node_t,
        dev_name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief create a tensor handle by tensor name."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle"]
    #[doc = " @param [in] tensor_name: Tensor name."]
    #[doc = " @param [in] data_type:  the data type."]
    #[doc = ""]
    #[doc = " @return The tensor handle or NULL on error."]
    #[doc = ""]
    pub fn create_graph_tensor(
        graph: graph_t,
        tensor_name: *const ::std::os::raw::c_char,
        data_type: ::std::os::raw::c_int,
    ) -> tensor_t;
}
extern "C" {
    #[doc = " @brief Get a tensor handle by tensor name."]
    #[doc = ""]
    #[doc = " @param [in] graph: The graph handle."]
    #[doc = " @param [in] tensor_name: Tensor name."]
    #[doc = ""]
    #[doc = " @return The tensor handle or NULL on error."]
    #[doc = ""]
    pub fn get_graph_tensor(graph: graph_t, tensor_name: *const ::std::os::raw::c_char)
        -> tensor_t;
}
extern "C" {
    #[doc = " @brief  Get the name of the tensor handle."]
    #[doc = ""]
    #[doc = " @param [in] tensor: the tensor handle."]
    #[doc = ""]
    #[doc = " @return A c string."]
    #[doc = ""]
    pub fn get_tensor_name(tensor: tensor_t) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Release the tensor handle."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = ""]
    #[doc = " @return None."]
    pub fn release_graph_tensor(tensor: tensor_t);
}
extern "C" {
    #[doc = " @brief Get the shape of tensor."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [out] dims: An int array to get the returned shape."]
    #[doc = " @param [in] dim_number: The array size."]
    #[doc = " @return >=1 the valid dim number, or -1 Fail."]
    #[doc = ""]
    pub fn get_tensor_shape(
        tensor: tensor_t,
        dims: *mut ::std::os::raw::c_int,
        dim_number: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Set the shape of tensor."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @param [in] dims: An int array to represent shape."]
    #[doc = " @param [in] dim_number: The array size."]
    #[doc = " @return 0: Success; -1: Fail."]
    #[doc = ""]
    pub fn set_tensor_shape(
        tensor: tensor_t,
        dims: *const ::std::os::raw::c_int,
        dim_number: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the byte size of a tensor should occupy."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = ""]
    #[doc = " @return <0: Error; >=0: Tensor size."]
    #[doc = " @note   If return 0, it means the shape of the tensor is not set yet."]
    pub fn get_tensor_buffer_size(tensor: tensor_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the buffer of the tensor."]
    #[doc = "    A tensor may deny to expose its internal buffer, so that get_tensor_buffer()"]
    #[doc = "    will fail but get_tensor_buffer_size()/set_tensor_data() succeed."]
    #[doc = ""]
    #[doc = " @param [in] tensor: The tensor handle."]
    #[doc = " @return The buffer address. if no buffer allocated return NULL."]
    pub fn get_tensor_buffer(tensor: tensor_t) -> *mut ::std::os::raw::c_void;
}
